--- a/index.html
+++ b/index.html
@@ -4,92 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CrossFit Munich Vereinsmeisterschaft</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f0f2f5;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        h1 {
-            color: #333;
-            text-align: center;
-            padding: 20px 0;
-        }
-        .tabs {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-        .tab {
-            padding: 10px 20px;
-            cursor: pointer;
-            background-color: #ff0000;
-            color: white;
-            margin: 0 5px;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-        .tab:hover {
-            background-color: #cc0000;
-        }
-        .tab.active {
-            background-color: #cc0000;
-        }
-        table {
-            margin: 0 auto;
-            border-collapse: collapse;
-            width: 100%;
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            display: none;
-            border-radius: 5px;
-            overflow: hidden;
-        }
-        table.active {
-            display: table;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 12px;
-            text-align: left;
-        }
-        th {
-            background-color: #ff0000;
-            color: white;
-            text-transform: uppercase;
-            cursor: pointer;
-            position: relative;
-        }
-        th:hover {
-            background-color: #cc0000;
-        }
-        th.sorted-asc::after {
-            content: ' ▲';
-            position: absolute;
-            right: 10px;
-        }
-        th.sorted-desc::after {
-            content: ' ▼';
-            position: absolute;
-            right: 10px;
-        }
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-        tr:hover {
-            background-color: #ddd;
-        }
-        .small-text {
-            font-size: 0.8em;
-            color: gray;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -98,131 +13,41 @@
             <div class="tab active" onclick="showTab('men')">Men</div>
             <div class="tab" onclick="showTab('women')">Women</div>
         </div>
-        <table id="men" class="active">
-            <thead>
-                <tr>
-                    <th onclick="sortTable('men', 0, 'asc')">Name</th>
-                    <th onclick="sortTable('men', 1, 'asc')">Rank</th>
-                    <th onclick="sortTable('men', 2, 'desc')">Score</th>
-                    <th onclick="sortTable('men', 3, 'desc')">Event 1</th>
-                    <th onclick="sortTable('men', 4, 'desc')">Event 2</th>
-                    <th onclick="sortTable('men', 5, 'desc')">Event 3</th>
-                    <th onclick="sortTable('men', 6, 'desc')">Event 4</th>
-                    <th onclick="sortTable('men', 7, 'desc')">Event 5</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-        <table id="women">
-            <thead>
-                <tr>
-                    <th onclick="sortTable('women', 0, 'asc')">Name</th>
-                    <th onclick="sortTable('women', 1, 'asc')">Rank</th>
-                    <th onclick="sortTable('women', 2, 'desc')">Score</th>
-                    <th onclick="sortTable('women', 3, 'desc')">Event 1</th>
-                    <th onclick="sortTable('women', 4, 'desc')">Event 2</th>
-                    <th onclick="sortTable('women', 5, 'desc')">Event 3</th>
-                    <th onclick="sortTable('women', 6, 'desc')">Event 4</th>
-                    <th onclick="sortTable('women', 7, 'desc')">Event 5</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
+        <div class="table-container active" id="men-container">
+            <table id="men">
+                <thead>
+                    <tr>
+                        <th onclick="sortTable('men', 0, 'asc')">Name</th>
+                        <th onclick="sortTable('men', 1, 'asc')">Rank</th>
+                        <th onclick="sortTable('men', 2, 'desc')">Score</th>
+                        <th onclick="sortTable('men', 3, 'desc')">Event 1</th>
+                        <th onclick="sortTable('men', 4, 'desc')">Event 2</th>
+                        <th onclick="sortTable('men', 5, 'desc')">Event 3</th>
+                        <th onclick="sortTable('men', 6, 'desc')">Event 4</th>
+                        <th onclick="sortTable('men', 7, 'desc')">Event 5</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
+        <div class="table-container" id="women-container">
+            <table id="women">
+                <thead>
+                    <tr>
+                        <th onclick="sortTable('women', 0, 'asc')">Name</th>
+                        <th onclick="sortTable('women', 1, 'asc')">Rank</th>
+                        <th onclick="sortTable('women', 2, 'desc')">Score</th>
+                        <th onclick="sortTable('women', 3, 'desc')">Event 1</th>
+                        <th onclick="sortTable('women', 4, 'desc')">Event 2</th>
+                        <th onclick="sortTable('women', 5, 'desc')">Event 3</th>
+                        <th onclick="sortTable('women', 6, 'desc')">Event 4</th>
+                        <th onclick="sortTable('women', 7, 'desc')">Event 5</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
     </div>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            fetch('data.csv')
-                .then(response => response.text())
-                .then(data => {
-                    const rows = data.split('\n').slice(1).filter(row => row.trim() !== '');
-                    const menData = [];
-                    const womenData = [];
-
-                    rows.forEach(row => {
-                        const [category, name, ...events] = row.split(',').map(item => item.trim());
-                        const eventScores = events.map(event => parseInt(event, 10));
-                        const score = eventScores.reduce((sum, event) => sum + event, 0);
-                        const participant = { name, score, events: eventScores };
-                        if (category === 'men') {
-                            menData.push(participant);
-                        } else if (category === 'women') {
-                            womenData.push(participant);
-                        }
-                    });
-
-                    const calculateEventRanks = (data) => {
-                        const eventCount = data[0].events.length;
-                        const eventRanks = Array.from({ length: eventCount }, () => []);
-                        data.forEach(participant => {
-                            participant.events.forEach((score, index) => {
-                                eventRanks[index].push({ name: participant.name, score });
-                            });
-                        });
-                        eventRanks.forEach(ranks => ranks.sort((a, b) => b.score - a.score));
-                        return eventRanks.map(ranks => ranks.reduce((map, { name }, rank) => (map[name] = rank + 1, map), {}));
-                    };
-
-                    const menEventRanks = calculateEventRanks(menData);
-                    const womenEventRanks = calculateEventRanks(womenData);
-
-                    const renderTable = (data, eventRanks, tableId) => {
-                        data.sort((a, b) => b.score - a.score);
-                        const tbody = document.querySelector(`#${tableId} tbody`);
-                        tbody.innerHTML = '';
-                        data.forEach((participant, rank) => {
-                            const eventCells = participant.events.map((score, index) => `<td>${score} <span class="small-text">(${eventRanks[index][participant.name]})</span></td>`).join('');
-                            const row = `<tr>
-                                <td>${participant.name}</td>
-                                <td>${rank + 1}</td>
-                                <td>${participant.score}</td>
-                                ${eventCells}
-                            </tr>`;
-                            tbody.innerHTML += row;
-                        });
-                    };
-
-                    renderTable(menData, menEventRanks, 'men');
-                    renderTable(womenData, womenEventRanks, 'women');
-                })
-                .catch(error => {
-                    console.error('Error fetching CSV data:', error);
-                });
-        });
-
-        function showTab(tabId) {
-            const tabs = document.querySelectorAll('.tab');
-            const tables = document.querySelectorAll('table');
-            tabs.forEach(tab => tab.classList.remove('active'));
-            tables.forEach(table => table.classList.remove('active'));
-            document.querySelector(`.tab[onclick="showTab('${tabId}')"]`).classList.add('active');
-            document.getElementById(tabId).classList.add('active');
-        }
-
-        function sortTable(tableId, columnIndex, order) {
-            const table = document.getElementById(tableId);
-            const tbody = table.querySelector('tbody');
-            const rows = Array.from(tbody.rows);
-
-            rows.sort((a, b) => {
-                const cellA = a.cells[columnIndex].textContent.trim();
-                const cellB = b.cells[columnIndex].textContent.trim();
-
-                if (columnIndex > 0) {
-                    const numA = parseFloat(cellA);
-                    const numB = parseFloat(cellB);
-                    return order === 'asc' ? numA - numB : numB - numA;
-                } else {
-                    return order === 'asc' ? cellA.localeCompare(cellB) : cellB.localeCompare(cellA);
-                }
-            });
-
-            rows.forEach(row => tbody.appendChild(row));
-
-            const ths = table.querySelectorAll('th');
-            ths.forEach(th => th.classList.remove('sorted-asc', 'sorted-desc'));
-            const th = ths[columnIndex];
-            th.classList.add(order === 'asc' ? 'sorted-asc' : 'sorted-desc');
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
