--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <div class="subtab" onclick="showWorkout(5)">Workout 5</div>
         </div>
         <div class="subtabs" id="heats-subtabs">
-            <div class="subtab" onclick="showHeat(1)">Heat 1</div>
-            <div class="subtab" onclick="showHeat(2)">Heat 2</div>
-            <div class="subtab" onclick="showHeat(3)">Heat 3</div>
-            <div class="subtab" onclick="showHeat(4)">Heat 4</div>
-            <div class="subtab" onclick="showHeat(5)">Heat 5</div>
+            <div class="subtab" onclick="showHeat(1)">Workout 1</div>
+            <div class="subtab" onclick="showHeat(2)">Workout 2</div>
+            <div class="subtab" onclick="showHeat(3)">Workout 3</div>
+            <div class="subtab" onclick="showHeat(4)">Workout 4</div>
+            <div class="subtab" onclick="showHeat(5)">Workout 5</div>
         </div>
         <div class="tab-content" id="announcements-content">
     <div id="announcement-details">
