test uupdate + sponsors

--- a/index.html
+++ b/index.html
@@ -8,15 +8,29 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <img src="cfm.jpeg" alt="CrossFit Munich Logo" class="logo">
-            <h1>Friday Night Lights</h1>
-        </div>
-        <div class="tabs">
-            <div class="tab" onclick="showTab('workouts')">Workouts</div>
-            <div class="tab-separator"></div>
-            <div class="tab active" onclick="showTab('men')">Men</div>
-            <div class="tab" onclick="showTab('women')">Women</div>
+        <div class="header-area">
+            <div class="sponsor-column">
+                <div class="sponsor-text">Presented by:</div>
+                <img src="nocco.png" alt="Nocco Logo" class="partner-logo">
+            </div>
+            <div class="main-header">
+                <div class="header">
+                    <div class="header-center">
+                        <img src="cfm.jpeg" alt="CrossFit Munich Logo" class="logo">
+                        <h1>Friday Night Lights</h1>
+                    </div>
+                </div>
+                <div class="tabs">
+                    <div class="tab" onclick="showTab('workouts')">Workouts</div>
+                    <div class="tab-separator"></div>
+                    <div class="tab active" onclick="showTab('men')">Men</div>
+                    <div class="tab" onclick="showTab('women')">Women</div>
+                </div>
+            </div>
+            <div class="sponsor-column">
+                <div class="sponsor-text">Presented by:</div>
+                <img src="barbells.png" alt="Barbells Logo" class="partner-logo">
+            </div>
         </div>
         <div class="subtabs" id="workout-subtabs">
             <div class="subtab" onclick="showWorkout(1)">Workout 25.1</div>
