--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
                     </div>
                 </div>
                 <div class="tabs">
-                    <a href="https://forms.gle/8cjnJrz1GxrJEmGq7" target="_blank" class="score-entry-button">Enter Score</a>
-                    <div class="tab" onclick="showTab('workouts')">Workouts</div>
+                    <div class="workouts-container">
+                        <div class="tab" onclick="showTab('workouts')">Workouts</div>
+                        <a href="https://forms.gle/8cjnJrz1GxrJEmGq7" target="_blank" class="score-entry-button">Enter Score</a>
+                    </div>
                     <div class="tab-separator"></div>
                     <div class="tab active" onclick="showTab('men')">Men</div>
                     <div class="tab" onclick="showTab('women')">Women</div>
