--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
                 <div class="tabs">
                     <div class="tab active" onclick="showTab('men')">Men</div>
                     <div class="tab" onclick="showTab('women')">Women</div>
-                    <div class="tab-separator"></div>
                     <div class="workouts-container">
                         <div class="tab" onclick="showTab('workouts')">Workouts</div>
-                        <a href="https://forms.gle/8cjnJrz1GxrJEmGq7" target="_blank" class="score-entry-button">Enter Score</a>
+                        <a href="https://forms.gle/8cjnJrz1GxrJEmGq7" target="_blank" class="score-entry-button">Enter<br>Score</a>
                     </div>
                 </div>
             </div>
