--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
                 <div class="tabs">
                     <div class="tab active" onclick="showTab('men')">Men</div>
                     <div class="tab" onclick="showTab('women')">Women</div>
-                    <div class="workouts-container">
-                        <div class="tab" onclick="showTab('workouts')">Workouts</div>
-                        <a href="https://forms.gle/8cjnJrz1GxrJEmGq7" target="_blank" class="score-entry-button">Enter<br>Score</a>
-                    </div>
+                    <div class="tab" onclick="showTab('kids')">Kids</div>
+                    <div class="tab" onclick="showTab('workouts')">Workouts</div>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfVfgW0o4czFThVy1EJrkipItMFvCFRTUlFCbwyCAwBfUbecg/closedform" target="_blank" class="score-entry-button">Enter Score</a>
                 </div>
             </div>
             <div class="sponsor-column">
@@ -70,6 +69,20 @@
                     </tr>
                 </thead>
                 <tbody></tbody>
+            </table>
+        </div>
+        <div id="kids-container" class="table-container">
+            <table id="kids">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Age</th>
+                        <th>Workout 25.1</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Kids data will be inserted here -->
+                </tbody>
             </table>
         </div>
     </div>
